fixed content not fitting in container

--- a/style.css
+++ b/style.css
@@ -7,16 +7,17 @@
 
 html, body {
    
-    
+    height: 100vh;
     background-color: #f5f4ef;
   }
 
 .container{
-    height: 100vh;
+   
     width:100%;
     display: flex;
     align-items: center;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 
